2005-03-19  Albert Chu  <chu11@llnl.gov>

	* Fixed variety of compiler warnings.

	* man/cerebro.1.in: New file.
	
	* configure.ac, man/Makefile.am: Updated for new manpages.

	* config/ac_cerebrod_configfile.m4: New file.

	* configure.ac: Add ac_cerebrod_configfile config option.

	* config/ac_hostsfile.m4: AC_SUBST the hostsfile.

	* config/ac_cerebrod_module_dir.m4: New file.

	* configure.ac, src/cerebrod/Makefile.am: CEREBROD_MODULE_DIR now
	defined by AC_CEREBROD_MODULE_DIR.

	* src/cerebrod/cerebrod_util.h, src/cerebrod/cerebrod_util.c
	(cerebrod_search_dir_for_module): Include modules list length.

	* src/cerebrod/cerebrod_config.c (_cerebrod_config_module_setup),
	src/cerebrod/cerebrod_clusterlist.c (cerebrod_clusterlist_setup):
	Support new cerebrod_search_dir_for_module interface.

	* man/cerebrod.8.in, man/cerebrod.conf.5.in: First draft.

	* config/ac_genders.m4, config/ac_gendersllnl.m4: Add manpage
	substitution flags.
	
2005-03-18  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_config.c (_cerebrod_config_module_setup,
	_find_config_module, _search_dir, _load_module): New functions.

	* src/cerebrod/cerebrod_config.c (cerebrod_config): Call
	_cerebrod_config_module_setup.

	* src/cerebrod/cerebrod_config_gendersllnl.c: New file.

	* src/cerebrod/Makefile.am: Adjusted for new module.

	* src/cerebrod/cerebrod_clusterlist_genders.c
	(genders_clusterlist_init),
	src/cerebrod/cerebrod_clusterlist_gendersllnl.c
	(gendersllnl_clusterlist_init): Fix argument param bug.

	* src/cerebrod/cerebrod_clusterlist.c
	(cerebrod_clusterlist_parse_options): Fix assertion bug.

	* src/cerebrod/cerebrod_config.c
	(_cerebrod_post_calculate_configuration_config_check),
	src/cerebrod/cerebrod.c (_cerebrod_post_config_initialization):
	Move option parsing from
	_cerebrod_post_calculate_configuration_config_ to
	_cerebrod_post_config_initialization.

	* src/cerebrod/cerebrod_config.c (_cerebrod_config_dump): Fix
	clusterlist_module_options output.
