@@ -1,5 +1,5 @@
 \."#############################################################################
-\."$Id: cerebrod.conf.5.in,v 1.3 2005-03-20 07:11:27 achu Exp $
+\."$Id: cerebrod.conf.5.in,v 1.4 2005-03-20 18:11:19 achu Exp $
 \."#############################################################################
 .TH cerebrod.conf 5 "May 2005" "cerebrod.conf @VERSION@" "cerebrod.conf"
 .SH "NAME"
@@ -21,6 +21,8 @@ file can be specified on the command line with the
 .I -c
 option.
 
+XXX need to do defaults
+
 .SH "CONFIGURATION OPTIONS"
 The following are a list of configuration options that can be
 specified in the configuration file.  Each configuration option must
@@ -30,40 +32,148 @@ whitespace.  Comments can be marked by using the pound sign ("#")
 character, and lines can be continued on the next using backslash
 ("\\").
 .TP
-.I heartbeat_frequency
-Specify the frequencey at which the 
+.I heartbeat_frequency ( sec | sec_min sec_max )
+Specify the frequency at which the the
 .B cerebrod
+daemon sends out heartbeat packets containing 
+.B Cerebro
+information.  The frequency should be specified in seconds.  The
+frequency can be specified either as a static frequency or a range of
+frequencies.  If a range is specified, a random number of seconds
+within that range is selected for every heartbeat packet sent.
 .TP
-.I heartbeat_destination_port
+.I heartbeat_destination_port num 
+Specify the destination port that heartbeat packets should be sent to.
+This should be different than the source port specified below.
 .TP
-.I heartbeat_destination_ip
+.I heartbeat_destination_ip ip_address
+Specify the destination ip address that heartbeat packets should be
+sent to.  The destination ip address may be either a singlecast or
+multicast address.
+.I heartbeat_source_port num 
+Specify the source port that heartbeat packets should be sent from.  
+This should be different than the destination port specified above.
 .TP
-.I heartbeat_source_port
+.I heartbeat_network_interface (network_interface | ip_address | subnet)
+Specify the network interface heartbeat packets should be sent out of.
+The network interface can be specified as a network interface (i.e.
+eth0), an ip address (i.e. 192.168.1.1) or a subnet using CIDR
+notation (i.e. 192.168.1.1/16).  If a network interface is not
+specified,
+.B cerebrod
+will search for and select an appropriate network interface. If the
+machine running 
+.B cerebrod
+contains multiple network interfaces, it would be recommended that the
+appropriate network interface be listed.
 .TP
-.I heartbeat_network_interface
+.I heartbeat_ttl num
+Specify the heartbeat packet time to live parameter.  This parameter
+is only used if the heartbeat destination ip address is a multicast ip
+address.
 .TP
-.I heartbeat_ttl
+.I speak ( on | off )
+Specify if the
+.B cerebrod
+daemon should send out packets or not.  Generally speaking, this should
+always be turned on.
 .TP
-.I speak
+.I listen ( on | off )
+Specify if the
+.B cerebrod
+daemon should receive packets or not.  Generally speaking, this option
+should be turned off for all but just a few machines in a cluster.  Just
+a few of the machines should be responsible for collecting the
+.B Cerebro
+data so that computational power of the cluster as a whole isn't lost.
 .TP
+.I listen_threads num
+Specify the number of listening threads the 
+.B cerebrod
+listener server should execute.
+.TP
+.I updown_server ( on | off )
+Specify if the
+.B cerebrod
+daemon should turn on the updown server.  The updown server can send
+be various tools and libraries to determine the up and down nodes
+in the cluster.  Generally speaking, this option should be turned on
+if the 
 .I listen
+option is turned on.  If the 
+.I listen
+option is turned off, the updown_server will not be started.
 .TP
-.I listen_threads
+.I updown_server_port num
+Specify the updown server port.
 .TP
-.I updown_server
+.I clusterlist_module ( name | filename | path )
+Specify the clusterlist module to be loaded for parsing a
+list/database of cluster nodes.  The name, filename, or full filename path
+to the clusterlist module can be specified.  Clusterlist modules are
+first searched for in the
+.B Cerebro
+package library, @CEREBROD_MODULE_DIR@.  They are then searched for in
+the current directory.
+
+The following clusterlist modules are currently searched for by
+.B cerebrod
+in the following order:
+ 
+.if @MANPAGE_GENDERSLLNL@ \{
+gendersllnl
+ 
+\}
+ 
+.if @MANPAGE_GENDERS@ \{
+genders
+ 
+\}
+ 
+hostsfile
+ 
+none
+
 .TP
-.I updown_server_port
-.TP
-.I clusterlist_module
-.TP
-.I clusterlist_module_options
+.I clusterlist_module_options str
+Specify arguments to pass to the clusterlist_module.  The arguments
+are typically passed as key=value pairs, although the
+clusterlist module is free to parse arguments however it wishes.
+
+The following parse options are currently supported by the default
+clusterlist modules:
+
+.if @MANPAGE_GENDERSLLNL@ \{
+gendersllnl: filename=<file> - Specify the path to the genders database.
+ 
+\}
+ 
+.if @MANPAGE_GENDERS@ \{
+genders: filename=<file> - Specify the path to the genders database.
+ 
+\}
+ 
+hostsfile: filename=<file> - Specify the path to the hostsfile database.
+
 .if @MANPAGE_DEBUG@ \{
 .TP
 .I speak_debug
+Turn on speak debugging.  Requires that debugging be turned on from
+the command line with the
+.I -d
+option.
 .TP
 .I listen_debug
+Turn on listen debugging.  Requires that debugging be turned on from
+the command line with the
+.I -d
+option. 
 .TP
 .I updown_server_debug
+Turn on updown server debugging.  Requires that debugging be turned on
+from the command line with the
+.I -d
+option.
 \}
 .SH "FILES"
 @CEREBROD_CONFIGFILE_DEFAULT@
